# keyrag

./: README.md  README_POST_CREATE.md  pyproject.toml
docs/excali/: idea.excalidraw
scratch_space/embed_/: openai_config.ipynb  vector_db_.ipynb
scratch_space/hasher_/: sample.ipynb
scratch_space/keypoint_/: mapper_.ipynb  sample.ipynb
src/keyrag/config/: keyrag_config.py  keyrag_paths.py  types.py
src/keyrag/embed/: embeddings_config.py  openai_embeddings_config.py  vector_db.py
src/keyrag/keypoint/: keypointer.py  mapper.py  openai_chat_config.py
src/keyrag/utils/: langchain_.py
tests/config/: test_env_vars.py  test_keyrag_paths.py
tests/embed/: test_hasher.py
