[tool.poetry]
name = "keyrag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "keyrag", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
loguru = "^0.7.2"
langchain = "^0.3.12"
langchain-community = "^0.3.12"
langchain-openai = "^0.2.12"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
nbformat = "^5.10.4"
rich = "^13.9.4"
tqdm = "^4.67.1"
chromadb = "^0.5.23"
langchain-chroma = "^0.1.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
multi_line_output = 3
